--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body{
         font-family: 'Roboto', sans-serif;
 
 }
+
+/*-----------------------main container-----------------------*/
+
 #mainWrapper{
     margin-top: 5%;
     background: linear-gradient(90deg, #56d1ba 50%, #303030 50%);
@@ -19,6 +22,9 @@ body{
     width: 70%;
     padding: 20px;
 }
+
+/*-----------------------top navigation bar-----------------------*/
+
 
 nav{
     display: flex;
@@ -60,6 +66,8 @@ nav>ul>li a:hover{
 }
 
 
+/*-----------------------header text-----------------------*/
+
 
 #headerDescription{
     margin: 10px auto;
@@ -99,31 +107,68 @@ nav>ul>li a:hover{
 }
 
 
+/*-----------------------personal description/skills-----------------------*/
 
 
 main{
-    padding: 40px;
-    height: 50vh;
     background: radial-gradient(white, whitesmoke);
     width: 70%;
     margin: auto;
     }
+section{
+        padding: 40px;
+
+}
+#personalStatementWrapper{
+    text-align: center;
+    font-size: 12px;
+    margin-bottom: 40px;
+    padding: 0px 40px;
+}
+#personalStatementWrapper> h1, h3{
+    margin: 40px;
+    font-size: 20px;
+    text-decoration: underline;
+}
+#hypetextContact{
+    text-decoration: underline;
+    color: #56d1ba;
+}
+
+#skillUlWrapper{
+    display: flex;
+    text-align: center;
+    margin-bottom: 40px;
+    padding: 0px 100px;
+}
+#leftUl{
+    flex: 1;
+    list-style-type: none;
+
+}
+#rightUl{
+    flex: 1;
+    list-style-type: none;
+    
+}
+
+/*-----------------------project thumbnails-----------------------*/
 
 
+#thumbnailSection{
+background: radial-gradient(whitesmoke, lightgray);
+}
 
-
-
-
-
-#filterWrapper{
-    padding: 0 40px;
+/* thumbnail filter buttons */
+#projectFilterWrapper{
     display: flex;
     justify-content: center;
+    padding: 0 60px;
 }
 .btn{
-    margin: 0 5%;
+    margin: 40px 40px;
     height: 25px;
-    background: none;
+    background: whitesmoke;
     border: solid 2px #56d1ba;
     border-radius: 5px;
     flex: 1;
@@ -137,4 +182,125 @@ main{
     background:#56d1ba;
     
     color: white;
+}
+
+/* thumbnails layout*/
+
+#portThumbnailWrapper{
+    text-align: center;
+}
+#portThumbnailWrapper>.thumbnail{
+    display: inline-block;
+    float:inherit;
+    margin: auto;
+    padding: 40px;
+    text-align: center;
+    transition: 0.2s;
+}
+
+#portThumbnailWrapper:after{
+    content:' ';
+    display: inline-block;
+    width: 100%;
+    height: 0;
+}
+.thumbnail:hover{
+    transform: translateY(-10px);
+}
+.thumbnail>h4, h6{
+    padding: 5px ;
+}
+.thumbnail>h6{
+    width: 150px;
+    margin: auto;
+}
+.thumbnail>.thumbBtn{
+    padding: 4px 10px;
+    
+    border: solid 2px #56d1ba;
+    border-radius: 5px;
+    transition: 0.2s;
+    font-family: 'Gugi', cursive;
+    font-size: 11px;
+}
+.thumbBtn:hover{
+    cursor: pointer;
+    background:#56d1ba;
+    
+    color: white;
+}
+
+
+/*-----------------------contact form-----------------------*/
+
+
+
+#contactSection{
+    background: #303030;
+
+}
+#contactSection>form{
+    width: 60%;
+    margin: 40px auto;
+    padding: 40px;
+    border-radius: 20px;
+    text-align: center;
+    background: radial-gradient(white, whitesmoke);
+    box-shadow: -2px 2px 10px black;
+
+    display: flex;
+    flex-direction: column;
+}
+#contactSection>form>input{
+    margin: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    border: none;
+    box-shadow: -2px 2px 10px whitesmoke;
+}
+
+/*-----------------------footer-----------------------*/
+
+footer{
+    width: 70%;
+    padding: 10px;
+    background: #303030;
+    color: whitesmoke;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    
+    font-size: 14px;
+}
+footer>ul>li a{
+    color: whitesmoke;
+    text-decoration: underline;
+}
+footer>ul>li a:hover{
+    color: darkgray;
+    text-decoration: none;
+    
+}
+footer>ul{
+    flex: 1;
+      
+    list-style-type: none;
+}
+
+footer>a{
+  
+}
+
+footer>p{
+    flex: 2;
+    padding: 20px;
+    font-size: 11px;
+
+}
+footer>#footerAddress{
+        flex: 1;
+}
+footer>#footerAddress>ul>li, a{
+        list-style-type: none;
 }
