--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
     height: 90%;
     width: 80%;
 }
+
 /*-----------------------header section-----------------------*/
 
 header{
@@ -149,7 +150,6 @@ nav>ul>.githubWrapper:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    letter-spacing: 1px;
 }
 
 
@@ -169,15 +169,16 @@ section{
 }
 
 #personalStatementWrapper{
+    margin: 20px 0px 20px 20px;
     padding: 0 80px;
     flex: 1;
     text-align: center;
     font-size: 11px;
+
 }
 #quarterCircleWrapper2{
     flex-basis: 15px;
     display: flex;
-    
     }
 #quarterCircle2{
     width: 200px;
@@ -209,12 +210,8 @@ section{
     filter: invert();
 }
 
-section{
-
-}
 
 #personalStatementWrapper> h1, h3{
-   
 }
 
 
@@ -362,7 +359,10 @@ section{
     vertical-align: top;
     background: white;
 }
-
+#portThumbnailWrapper>.thumbnail>img{
+    height: 200px; 
+    width: 220px;
+}
 .thumbnail>p, small{
     padding-left: 10px;
 }
@@ -480,4 +480,466 @@ footer>.githubWrapper{
 }
 footer>.githubWrapper:hover{
     transform: translateY(-5px);
+}
+
+
+@media only screen and (max-width: 580px){
+    #mainWrapper{
+    margin-top: 0%;
+    background: linear-gradient(90deg, #4aa0ba 50%, #303030 50%);
+    height: 100%;
+    width: 100%;
+    }
+    header{
+    padding: 0px;
+}
+    #quarterCircle{
+    width: 100px;
+    height: 100px;
+    background: whitesmoke;
+    border-radius: 0 0 100px 0;
+    -moz-border-radius: 0 0 100px 0;
+    -webkit-border-radius: 0 0 100px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 4px white;
+    flex: 1;
+    
+}
+
+    #quarterCircle>a>p{
+    flex-basis: 20%;
+    font-size: 22px;
+    
+}
+    #quarterCircle>a>#aboutWord{
+    font-size: 16px;
+    padding-right: 0px;
+        padding-top: 10px;
+}
+    /*nav bar*/
+
+nav{
+    display: none;
+}
+nav>ul{
+    flex:1;
+    display: flex;
+    list-style: none;
+    margin-left: 40px;
+    align-items: center;
+    text-align: center;
+    font-size: 12px;
+}
+nav>ul>li,a {
+    flex: 1;
+    text-decoration: none;
+    color: white;
+    transition: 0.2s;
+}
+nav>ul>li a:hover{
+    text-decoration: underline;
+    }
+nav>ul>li::before{
+    content: "\2022"; 
+    color: #4aa0ba;
+    font-weight: bold; 
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
+nav>ul>.githubWrapper{
+    transition: 0.2s;
+}
+nav>ul>.githubWrapper:hover{
+    transform: translateY(-5px);
+}
+    /*-----------------------header text-----------------------*/
+
+
+#headerName{
+    margin-top: 100px;
+    display: flex;
+    font-size: 18px;
+}
+#headerName>#fName{
+    color: #303030;
+    flex: 1;
+    text-align: right;
+    letter-spacing: 2px;
+}
+#headerName>#sName{
+    color: #4aa0ba;
+    flex: 1;
+    text-align: left;
+}
+#headerDescription{
+    margin: 40px auto;
+    width: 100%;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+#headerDescription>h2{
+    background: #4aa0ba;
+    margin-bottom: 0px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+#headerDescription>h4{
+    background: #303030;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+
+}
+    /*-----------------------personal description/skills-----------------------*/
+
+
+main{
+    background: radial-gradient(white,whitesmoke,whitesmoke, lightgray);
+    margin: auto;
+}
+section{
+    padding: 0px;
+    width: 100%;
+}
+#section1-col-1{
+    display: flex;
+}
+
+#personalStatementWrapper{
+    padding: 0 0px;
+    flex: 1;
+    text-align: center;
+    font-size: 11px;
+}
+#quarterCircleWrapper2{
+    flex-basis: 15px;
+    display: flex;
+    
+    }
+#quarterCircle2{
+    width: 100px;
+    height: 100px;
+    margin: 0px 0px 0px 0px;
+    background: #4aa0ba;
+    border-radius: 0 0 0 100px;
+    -moz-border-radius: 0 0 0 100px;
+    -webkit-border-radius: 0 0 0 100px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex: 1;
+    padding-left: 40px;
+}
+#quarterCircle2>a{
+    color: white;
+    text-decoration: none;
+   
+    text-align: center;
+    padding-bottom: 30px;
+    transition: 0.2s;
+}
+#quarterCircle2>a>p{
+    padding: 5px;
+    font-size: 14px;
+}
+#quarterCircle2>a>img{
+    filter: invert();
+    height: 30px;
+    
+}
+
+section{
+
+}
+
+#personalStatementWrapper> h1, h3{
+   
+}
+
+
+#skillUlWrapper{
+    text-align: center;
+    margin-bottom: 10px
+    
+}
+#skillUlWrapper>h3{
+    margin-bottom: 10px
+        
+}
+
+#skillUlWrapper>ul{
+    display: inline-block;
+    flex-direction: row;
+    width: 100%;
+    margin: auto;
+}
+#skillUlWrapper>ul>.skillHeader{
+    margin: 10px 20px;
+    min-width: 150px;
+    display: inline-block;
+    text-align: center;
+    width: 150px;
+    height: 180px;
+    background: white;
+    color: #4aa0ba;
+    vertical-align: top;
+    box-shadow: 0px 0px 5px lightgray;
+    
+}
+#skillUlWrapper>ul>.skillHeader>h3{
+    padding-top: 25px ;
+    text-align: center;
+    font-size: 20px;
+}   
+#skillUlWrapper>ul>.skillHeader>.liWrapper{
+    margin: auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 128px;
+}
+#skillUlWrapper>ul>.skillHeader>.liWrapper>li{
+    font-size: 12px;
+    color: #303030;
+    list-style: none;
+    margin: auto;
+}
+
+
+
+#knowledgeOfUlWrapper{
+    text-align: center;
+
+}
+#knowledgeOfUlWrapper>h5{
+    margin-bottom: 10px;
+    
+}
+#knowledgeOfUlWrapper>ul{
+}
+#knowledgeOfUlWrapper>ul>.KnowHeader{ 
+    width: 100px;
+    height: 100px;
+    margin: 10px 20px;
+    display: inline-block;
+    text-align: center;
+    background:#a8cee0;
+    color: #303030;
+    vertical-align: top;
+    box-shadow: 0px 0px 5px lightgray;  
+}
+.KnowHeader>h6{
+    font-size: 12px;
+    padding: 5px 0; 
+}
+.KnowHeader>ul{
+    height: 69px;
+    display: flex;
+    flex-direction: column;
+}
+.KnowHeader>ul>li{
+    font-size: 11px;
+    color: #303030;
+    list-style: none;
+    margin: auto;
+    flex: 1;
+}
+#section2Break{
+    background: #4aa0ba;
+    padding: 30px;
+}
+    
+/*-----------------------project thumbnails-----------------------*/
+
+
+#thumbnailSection{
+
+}
+
+/* thumbnail filter buttons */
+#projectFilterWrapper{
+    margin-top: 40px;
+    padding: 10px 0px;
+    display: flex;
+    justify-content: center;
+    background: white;
+}
+.btn{
+    height: 30px;
+    max-width: 150px;
+    background: white;
+    border: solid 2px #4aa0ba;
+    flex: 1;
+    transition: 0.2s;
+    font-size: 11px;
+
+}
+.btn:hover{
+    cursor: pointer;
+    background:#4aa0ba;
+    
+    color: white;
+}
+#btn2{
+    margin-left: 0px;
+    background: #4aa0ba;
+}
+
+/* thumbnails layout*/
+
+#portThumbnailWrapper{
+    text-align: center;
+}
+#portThumbnailWrapper>.thumbnail{
+    display: inline-block;
+    margin: auto;
+    height: 165px;
+    width: 110px;
+    margin: 10px;
+    text-align: center;
+    transition: 0.2s;
+    vertical-align: top;
+    background: white;
+    line-height: 15px;
+    }
+#portThumbnailWrapper>.thumbnail>img{
+    width: 110px;
+    height: 110px;
+}
+.thumbnail>p{
+    font-size: 14px;
+}
+.thumbnail>small{
+    font-size: 12px;
+}
+.thumbnail>p, small{
+    padding-left: 0px;
+}
+
+.thumbnail:hover{
+    transform: translateY(-10px);
+}
+
+
+
+.thumbBtn:hover{
+    cursor: pointer;
+    background:#4aa0ba;
+    color: white;
+}
+/*-----------------------contact form-----------------------*/
+
+
+
+#contactSection{
+    background: #303030;
+    border-top: solid 10px #4aa0ba;
+    border-bottom: solid 10px #4aa0ba;
+
+}
+#contactSection>form{
+    width: 90%;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 20px;
+    text-align: center;
+    background: radial-gradient(white, whitesmoke);
+    box-shadow: -2px 2px 10px black;
+
+    display: flex;
+    flex-direction: column;
+
+}
+#contactSection>form>input{
+    margin: 10px 5px;
+    padding: 10px;
+    border-radius: 20px;
+    border: none;
+    box-shadow: -2px 2px 10px #ededed;
+}
+#contactSection>form>input:focus{
+    outline-width: 2px;
+    outline-color: #4aa0ba;
+
+}
+#contactSection>form>textarea{
+  
+    margin: 20px auto;
+    border: none;
+    height: 100px;
+    resize: none;
+    box-shadow: -2px 2px 10px #ededed;
+    width: 100%;
+
+}
+#contactSection>form>textarea:focus{
+    outline-width: 2px;
+    outline-color: #4aa0ba;
+    outline-color: #4aa0ba;
+
+}
+#contactSection>form>.btn{
+    margin: auto;
+    width: 100px;
+    background: lightGray;
+}
+/*-----------------------footer-----------------------*/
+
+footer{
+    padding:10px 0;
+    border-bottom: solid 10px #4aa0ba;
+    border-top: none;
+    background: #303030;
+    color: whitesmoke;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    font-size: 14px;
+}
+footer>ul>li a{
+    color: whitesmoke;
+    text-decoration: underline;
+}
+footer>ul>li a:hover{
+    color: darkgray;
+    text-decoration: none;
+    
+}
+footer>ul{
+    flex: 1;
+      
+    list-style-type: none;
+}
+
+footer>a{
+  
+}
+
+footer>p{
+    flex: 2;
+    padding: 20px;
+    font-size: 11px;
+
+}
+footer>.githubWrapper{
+    transition: 0.2s;
+}
+footer>.githubWrapper:hover{
+    transform: translateY(-5px);
+}
+
+
 }
