--- a/style.css
+++ b/style.css
@@ -111,6 +111,9 @@ nav>.githubWrapper{
 nav>.githubWrapper:hover{
     transform: translateY(-5px);
 }
+#hamburgerNavbar{
+    display: none;
+}
 #hamburgerBtn{
     display: none;
 }
@@ -533,7 +536,6 @@ nav>ul{
     display: none;
     
 }
-    
 #hamburgerBtn{
     margin: auto;
     height: 30px;
@@ -700,34 +702,34 @@ section{
 
 #skillUlWrapper>ul{
     display: inline-block;
-    flex-direction: row;
     width: 100%;
     margin: auto;
 }
 #skillUlWrapper>ul>.skillHeader{
     margin: 10px 20px;
-    min-width: 150px;
     display: inline-block;
     text-align: center;
-    width: 150px;
-    height: 180px;
+    min-width: 130px;
+    width: 10px;
+    height: 160px;
     background: white;
     color: #4aa0ba;
     vertical-align: top;
     box-shadow: 0px 0px 5px lightgray;
-    
+
 }
 #skillUlWrapper>ul>.skillHeader>h3{
     padding-top: 25px ;
     text-align: center;
     font-size: 20px;
+
 }   
 #skillUlWrapper>ul>.skillHeader>.liWrapper{
     margin: auto;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    height: 128px;
+    height: 104px;
 }
 #skillUlWrapper>ul>.skillHeader>.liWrapper>li{
     font-size: 12px;
