--- a/style.css
+++ b/style.css
@@ -11,6 +11,21 @@ body{
     align-items: center;
     font-family: 'Roboto', sans-serif;
 }
+
+html{
+    scroll-behavior:smooth;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 /*-----------------------main container-----------------------*/
 
 #mainWrapper{
@@ -384,111 +399,6 @@ section{
     transform: translateY(-10px);
 }
 
-
-
-
-
-/*-----------------------contact form-----------------------*/
-
-
-
-#contactSection{
-    background: #303030;
-    border-top: solid 10px #4aa0ba;
-}
-#contactSection>form{
-    width: 60%;
-    margin: 40px auto;
-    padding: 40px;
-    border-radius: 20px;
-    text-align: center;
-    background: radial-gradient(white, whitesmoke);
-    box-shadow: -2px 2px 10px black;
-    display: flex;
-    flex-direction: column;
-
-}
-#contactSection>form>input{
-    margin: 20px;
-    padding: 10px;
-    border-radius: 20px;
-    border: none;
-    box-shadow: -2px 2px 10px #ededed;
-}
-#contactSection>form>input:focus{
-    outline-width: 2px;
-    outline-color: #4aa0ba;
-
-}
-#contactSection>form>textarea{
-  
-    margin: 20px auto;
-    border: none;
-    height: 100px;
-    resize: none;
-    box-shadow: -2px 2px 10px #ededed;
-    width: 80%;
-
-}
-#contactSection>form>textarea:focus{
-    outline-width: 2px;
-    outline-color: #4aa0ba;
-    outline-color: #4aa0ba;
-
-}
-#contactSection>form>.btn{
-    margin: auto;
-    width: 100px;
-    background: lightGray;
-}
-/*-----------------------footer-----------------------*/
-
-footer{
-    padding:40px 0;
-    border-bottom: solid 10px #4aa0ba;
-    border-top: solid 10px #4aa0ba;
-    background: #303030;
-    color: whitesmoke;
-    display: flex;
-    align-items: center;
-    margin: auto;
-    text-align: center;
-    font-size: 14px;
-}
-footer>ul>li a{
-    color: whitesmoke;
-    text-decoration: underline;
-}
-footer>ul>li a:hover{
-    color: darkgray;
-    text-decoration: none;
-    
-}
-footer>ul{
-    flex: 1;
-      
-    list-style-type: none;
-}
-
-footer>a{
-  
-}
-
-footer>p{
-    flex: 2;
-    padding: 20px;
-    font-size: 11px;
-
-}
-footer>.githubWrapper{
-    transition: 0.2s;
-    flex: 1;
-}
-footer>.githubWrapper:hover{
-    transform: translateY(-5px);
-}
-
-
 #modal{
     position: fixed;
     background: #303030;
@@ -544,6 +454,150 @@ footer>.githubWrapper:hover{
 #closeModal:hover{
     cursor: pointer;
 }
+
+
+
+/*-----------------------contact form-----------------------*/
+
+
+
+#contactSection{
+    background: #303030;
+    border-top: solid 10px #4aa0ba;
+  
+}
+
+#contactSection>form{
+    width: 60%;
+    margin: 40px auto;
+    padding: 60px;
+    border-radius: 20px;
+    background: radial-gradient(white, whitesmoke);
+    box-shadow: -2px 2px 10px black;
+    display: flex;
+    flex-direction: column;
+
+}
+#contactSection>form>.formControl{
+    margin: 10px 0;
+    position: relative;
+
+}
+.formControl>input{
+    width: 100%;
+    margin: 5px 0;
+    padding: 10px;
+    display: block;
+    border-radius: 20px;
+    border: none;
+    box-shadow: -2px 2px 10px #ededed;
+}
+.formControl>input:focus{
+    outline-width: 2px;
+    outline-color: #4aa0ba;
+    
+}
+.formControl.success input{
+    border:solid 1px #2ecc71;
+}
+.formControl.success i.fa-check-circle{
+    color: #2ecc71;
+    visibility: visible;
+}
+.formControl.error input{
+    border:solid 1px #e74c3c;
+}
+.formControl.error i.fa-exclamation-circle{
+    color: #e74c3c;
+    visibility: visible;
+}
+.formControl.error small{
+    color: #e74c3c;
+    visibility: visible;
+}
+.formControl i {
+    visibility: hidden;
+    position: absolute;
+    top: 15px;
+    right: 10px;
+}
+.formControl small {
+    visibility: hidden;
+    
+}
+.formControl>textarea{
+    
+    margin: 20px auto;
+    border: none;
+    height: 100px;
+    resize: none;
+    box-shadow: -2px 2px 10px #ededed;
+    width: 100%;
+
+}
+
+.formControl>textarea:focus{
+    outline-width: 2px;
+    outline-color: #4aa0ba;
+    outline-color: #4aa0ba;
+
+}
+.formControl>#subBtn{
+    margin: auto;
+    width: 150px;
+    border: solid 1px #303030;
+}
+
+
+/*-----------------------footer-----------------------*/
+
+footer{
+    padding:40px 0;
+    border-bottom: solid 10px #4aa0ba;
+    border-top: solid 10px #4aa0ba;
+    background: #303030;
+    color: whitesmoke;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    font-size: 14px;
+}
+footer>ul>li a{
+    color: whitesmoke;
+    text-decoration: underline;
+}
+footer>ul>li a:hover{
+    color: darkgray;
+    text-decoration: none;
+    
+}
+footer>ul{
+    flex: 1;
+      
+    list-style-type: none;
+}
+
+footer>a{
+  
+}
+
+footer>p{
+    flex: 2;
+    padding: 20px;
+    font-size: 11px;
+
+}
+footer>.githubWrapper{
+    transition: 0.2s;
+    flex: 1;
+}
+footer>.githubWrapper:hover{
+    transform: translateY(-5px);
+}
+
+
+
 
 
 
