--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ section{
 
 
 #thumbnailSection{
-
+   
 }
 
 /* thumbnail filter buttons */
@@ -349,8 +349,9 @@ section{
     display: flex;
     justify-content: center;
     background: white;
+    box-shadow: 0 0 5px lightgray;
 }
-.btn{
+.categoryBtnStyle{
     height: 30px;
     max-width: 150px;
     background: white;
@@ -360,45 +361,79 @@ section{
     font-size: 11px;
 
 }
-.btn:hover{
+.categoryBtnStyle:hover{
     cursor: pointer;
     background:#4aa0ba;
     
     color: white;
 }
-#btn2{
+.categoryBtnAllStyle{
     margin-left: 40px;
     background: #4aa0ba;
+    height: 30px;
+    max-width: 150px;
+    flex: 1;
+    transition: 0.2s;
+    font-size: 11px;
 }
 
 /* thumbnails layout*/
 
 #portThumbnailWrapper{
     text-align: center;
+    width: 90%;
+    margin: auto;
+
+    overflow: hidden;
+
 }
 #portThumbnailWrapper>.thumbnail{
-    display: inline-block;
+    float: left;
     margin: auto;
-    height: 250px;
-    width: 220px;
-    margin: 20px;
+    width: 20%;
+    margin: 2.5%;
     text-align: left;
     transition: 0.2s;
     vertical-align: top;
     background: white;
-}
-#portThumbnailWrapper>.thumbnail>img{
-    height: 200px; 
-    width: 220px;
-}
+    box-shadow: 0 0 5px lightgray;
+    
+  }
+  #portThumbnailWrapper>.thumbnail::before{
+    content: "";
+	  float: left;
+  	padding-top: 0%;
+  }
+  #portThumbnailWrapper>.thumbnail>img{
+    width: 100%;
+   
+    
+  }
 .thumbnail>p, small{
     padding-left: 10px;
 }
 
 .thumbnail:hover{
     transform: translateY(-10px);
+    cursor: pointer;
 }
-
+.thumbnailBtn{
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 4px;
+    
+    padding: 5px 20px;
+    
+    background: white;
+    border: solid 2px #4aa0ba;
+    flex: 1;
+    transition: 0.2s;
+    font-size: 11px;
+    color: #303030;
+  }
+  .thumbnailBtn>a{
+      color:#303030 ;
+  }
 #modal{
     position: fixed;
     background: #303030;
@@ -463,7 +498,9 @@ section{
     
     
 }
-
+.hide{
+    display:none ;
+}
 /*-----------------------contact form-----------------------*/
 
 
@@ -483,7 +520,7 @@ section{
     box-shadow: -2px 2px 10px black;
     display: flex;
     flex-direction: column;
-
+    clear: both;
 }
 #contactSection>form>.formControl{
     margin: 10px 0;
