--- a/style.css
+++ b/style.css
@@ -772,7 +772,12 @@ nav>.githubWrapper>p{
 
 @media only screen and (max-width: 900px){
 
-
+    #portThumbnailWrapper>.thumbnail{
+    
+        width: 40%;
+        margin: 5%;
+        
+      }
 #contactSection{
     background: #303030;
     border-top: solid 10px #4aa0ba;
@@ -1056,81 +1061,31 @@ section{
 /*-----------------------project thumbnails-----------------------*/
 
 
-#thumbnailSection{
 
-}
 
-/* thumbnail filter buttons */
-#projectFilterWrapper{
-    margin-top: 40px;
-    padding: 10px 0px;
-    display: flex;
-    justify-content: center;
-    background: white;
-}
-.btn{
-    height: 30px;
-    max-width: 150px;
-    background: white;
-    border: solid 2px #4aa0ba;
-    flex: 1;
-    transition: 0.2s;
-    font-size: 11px;
 
-}
-.btn:hover{
-    cursor: pointer;
-    background:#4aa0ba;
-    
-    color: white;
-}
-#btn2{
-    margin-left: 0px;
-    background: #4aa0ba;
-}
 
-/* thumbnails layout*/
 
-#portThumbnailWrapper{
-    text-align: center;
-}
 #portThumbnailWrapper>.thumbnail{
-    display: inline-block;
-    margin: auto;
-    height: 165px;
-    width: 110px;
-    margin: 10px;
-    text-align: center;
-    transition: 0.2s;
-    vertical-align: top;
-    background: white;
-    line-height: 15px;
-    }
-#portThumbnailWrapper>.thumbnail>img{
-    width: 110px;
-    height: 110px;
-}
-.thumbnail>p{
-    font-size: 14px;
-}
-.thumbnail>small{
-    font-size: 12px;
-}
-.thumbnail>p, small{
-    padding-left: 0px;
-}
-
-.thumbnail:hover{
-    transform: translateY(-10px);
-}
+    
+    width: 100%;
+    margin: 5% 0;
+  }
+  
 
 
 
-.thumbBtn:hover{
-    cursor: pointer;
-    background:#4aa0ba;
-    color: white;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 /*-----------------------footer-----------------------*/
 
